--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,26 @@
 [tox]
 isolated_build = true
-envlist = py36-django111,py{36,37,38,39}-django{20,21,22,30,31,32}
+envlist = py{38,39,310}-django{22,30,31,32,41}
 
 [gh-actions]
 python =
-	3.6: py36
-	3.7: py37
 	3.8: py38
 	3.9: py39
+	3.10: py310
 
 [testenv]
 setenv = PYTHONPATH={toxinidir}
 deps =
-	django111: Django>=1.11,<2.0
-	django20: Django>=2.0,<2.1
-	django21: Django>=2.1,<2.2
 	django22: Django>=2.2,<2.3
 	django30: Django>=3.0,<3.1
 	django31: Django>=3.1,<3.2
 	django32: Django>=3.2,<3.3
-whitelist_externals =
+	django41: Django>=4.1,<4.2
+allowlist_externals =
 	poetry
 	sh
 skip_install = true
 commands =
-	poetry export --dev --without-hashes -o {toxworkdir}/reqs.txt
-	sh -c 'grep -v "^[dD]jango==" {toxworkdir}/reqs.txt | poetry run pip install --no-deps -r /dev/stdin'
-	poetry run pytest --isort --flake8 --black --cov
+	poetry export --with dev --without-hashes -o {toxworkdir}/reqs.txt
+	sh -c 'grep -v "^[dD]jango==" {toxworkdir}/reqs.txt | python -m pip install --no-deps -r /dev/stdin'
+	pytest --isort --flake8 --black --cov
