--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
 isolated_build = true
-envlist = py{38,39,310}-django{22,30,31,32,41}
+envlist = py{38,39,310,311}-django{22,30,31,32,41,42}
 
 [gh-actions]
 python =
 	3.8: py38
 	3.9: py39
 	3.10: py310
+	3.11: py311
 
 [testenv]
 setenv = PYTHONPATH={toxinidir}
@@ -16,6 +17,7 @@ deps =
 	django31: Django>=3.1,<3.2
 	django32: Django>=3.2,<3.3
 	django41: Django>=4.1,<4.2
+	django42: Django>=4.2,<4.3
 allowlist_externals =
 	poetry
 	sh
