--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,20 @@
 [tox]
 isolated_build = true
-envlist = py{38,39,310,311}-django{22,30,31,32,41,42}
+envlist = py{310,311}-django{32,41,42,51}
 
 [gh-actions]
 python =
-	3.8: py38
-	3.9: py39
 	3.10: py310
 	3.11: py311
 
 [testenv]
 setenv = PYTHONPATH={toxinidir}
 deps =
-	django22: Django>=2.2,<2.3
-	django30: Django>=3.0,<3.1
-	django31: Django>=3.1,<3.2
+    pip
 	django32: Django>=3.2,<3.3
 	django41: Django>=4.1,<4.2
 	django42: Django>=4.2,<4.3
+	django51: Django>=5.1,<5.2
 allowlist_externals =
 	poetry
 	sh
